Seems to load OK into tab ff ext and work rudimentarily

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   },
   "homepage": "https://github.com/linkeddata/solid-ui",
   "dependencies": {
-    "solid": "^0.0.1",
-    "rdflib": "^0.5.0"
+    "solid-client": "",
+    "rdflib": ""
   },
   "devDependencies": {
     "browserify": "^13.0.0",
