--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "homepage": "https://github.com/linkeddata/solid-ui",
   "dependencies": {
     "solid-client": "",
-    "rdflib": ""
+    "rdflib": "https://github.com/linkeddata/rdflib.js.git"
   },
   "devDependencies": {
     "browserify": "^13.0.0",
