--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
   "homepage": "https://github.com/linkeddata/solid-ui",
   "dependencies": {
     "escape-html": "^1.0.3",
+    "node-uuid": "^1.4.7",
     "rdflib": "^0.12.1",
-    "solid-client": "^0.22.4"
+    "solid-client": "^0.22.4",
+    "solid-web-client": "0.0.9"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
