--- a/package.json
+++ b/package.json
@@ -45,19 +45,16 @@
   "dependencies": {
     "escape-html": "^1.0.3",
     "node-uuid": "^1.4.7",
-    "rdflib": "^0.12.1",
-    "solid-client": "^0.22.4",
-    "solid-web-client": "0.0.9"
+    "rdflib": "^0.15.0",
+    "solid-client": "^0.24.3",
+    "solid-web-client": "0.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.0.0",
-    "minifyify": "^7.2.1",
-    "qunit": "^0.9.0",
-    "standard": "^5.4.1",
-    "tape": "^4.4.0"
+    "browserify": "^14.4.0",
+    "minifyify": "^7.2.1"
   },
   "standard": {
     "globals": [
