Refactor checkUser(), remove checkUserSetMe()

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build-browserified": "browserify -r ./src/index.js:solid-ui -t babelify --exclude 'xhr2' > dist/solid-ui.js",
     "build-minified": "browserify -r ./src/index.js:solid-ui -t babelify --exclude 'xhr2' -d -p [minifyify --no-map] > dist/solid.min.js",
     "prebuild": "npm run clean && mkdir -p dist",
-    "build": "npm run build-lib && npm run build-browserified && npm run build-minified",
+    "build-old": "npm run build-lib && npm run build-browserified && npm run build-minified",
+    "build": "npm run build-lib",
     "clean": "rm -rf dist/ && rm -rf lib/",
     "standard": "standard src/*",
     "pretest": "npm run standard",
