--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build-browserified": "browserify -r ./src/index.js:solid-ui -t babelify --exclude 'xhr2' > dist/solid-ui.js",
     "build-minified": "browserify -r ./src/index.js:solid-ui -t babelify --exclude 'xhr2' -d -p [minifyify --no-map] > dist/solid.min.js",
     "prebuild": "npm run clean && mkdir -p dist",
-    "build": "npm run build-lib && npm run build-browserified && npm run build-minified",
+    "build-old": "npm run build-lib && npm run build-browserified && npm run build-minified",
+    "build": "npm run build-lib",
     "clean": "rm -rf dist/ && rm -rf lib/",
     "standard": "standard src/*",
     "pretest": "npm run standard",
@@ -45,25 +46,23 @@
   "dependencies": {
     "escape-html": "^1.0.3",
     "node-uuid": "^1.4.7",
-    "rdflib": "^0.12.1",
-    "solid-client": "^0.22.4",
-    "solid-web-client": "0.0.9"
+    "rdflib": "^0.15.0",
+    "solid-client": "^0.24.3",
+    "solid-web-client": "0.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.0.0",
-    "minifyify": "^7.2.1",
-    "qunit": "^0.9.0",
-    "standard": "^5.4.1",
-    "tape": "^4.4.0"
+    "browserify": "^14.4.0",
+    "minifyify": "^7.2.1"
   },
   "standard": {
     "globals": [
       "$rdf",
       "tabulator",
-      "QUnit"
+      "QUnit",
+      "$SolidTestEnvironment"
     ]
   }
 }
