Convert utils.js and signin.js to node module export

--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
       "$rdf",
       "tabulator",
       "QUnit",
-      "$SolidTestEnvironment"
+      "$SolidTestEnvironment",
+      "AudioContext"
     ]
   }
 }
