--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
-    "minifyify": "^7.2.1"
+    "minifyify": "^7.2.1",
+    "solid-auth-client": "^0.3.4"
   },
   "standard": {
     "globals": [
