--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "escape-html": "^1.0.3",
     "node-uuid": "^1.4.7",
     "rdflib": "^0.16.3",
-    "solid-auth-client": "^0.4.0",
+    "solid-auth-client": "solid/solid-auth-client#v0.5.0",
     "solid-auth-tls": "^0.1.2"
   },
   "devDependencies": {
