--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npm run build-lib",
     "postversion": "git push origin master --follow-tags",
     "prepublish": "npm run build",
-    "standard": "standard src/signin.js src/utils.js",
+    "standard": "standard",
     "test": "npm run standard"
   },
   "repository": {
