--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "escape-html": "^1.0.3",
     "node-uuid": "^1.4.7",
     "rdflib": ">=0.16.6",
+    "regenerate": "^1.3.2",
     "solid-auth-client": "^1.0.0",
     "solid-auth-tls": "^0.1.2"
   },
