--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
   "dependencies": {
     "escape-html": "^1.0.3",
     "node-uuid": "^1.4.7",
-    "rdflib": ">=0.17.0",
+    "rdflib": "^0.17.1",
     "regenerate": "^1.3.2",
-    "solid-auth-client": "^2.0.0",
+    "solid-auth-client": ">=2.2.3",
     "solid-auth-tls": "^0.1.2"
   },
   "devDependencies": {
