--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npm run build-lib",
     "postversion": "git push origin master --follow-tags",
     "prepublishOnly": "npm run build",
-    "standard": "standard",
+    "standard": "standard src",
     "test": "npm run standard"
   },
   "repository": {
@@ -49,7 +49,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-env": ">=1.7.0",
     "standard": "^10.0.2"
   },
   "standard": {
