--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "escape-html": "^1.0.3",
     "node-uuid": "^1.4.7",
-    "rdflib": "^0.17.1",
+    "rdflib": ">=0.19.0",
     "regenerate": "^1.3.2",
     "solid-auth-client": "^2.2.6",
     "solid-auth-tls": "^0.1.2"
