--- a/package.json
+++ b/package.json
@@ -42,7 +42,24 @@
   "dependencies": {
     "escape-html": "^1.0.3",
     "node-uuid": "^1.4.7",
-    "rdflib": ">=0.19.0",
+    "rdflib": "^0.19.1",
+    "regenerate": "^1.3.2",
+    "solid-auth-client": "^2.2.6",
+    "solid-auth-tls": "^0.1.2"
+  },
+  "dependenciesBackup": {
+    "ajv": "^6.5.5",
+    "escape-html": "^1.0.3",
+    "node-uuid": "^1.4.7",
+    "rdflib": "^0.19.1",
+    "regenerate": "^1.3.2",
+    "solid-auth-client": "^2.2.6",
+    "solid-auth-tls": "^0.1.2"
+  },
+  "dependenciesFile": {
+    "escape-html": "^1.0.3",
+    "node-uuid": "^1.4.7",
+    "rdflib": "file://../../linkeddata/rdflib.js",
     "regenerate": "^1.3.2",
     "solid-auth-client": "^2.2.6",
     "solid-auth-tls": "^0.1.2"
