--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
   "homepage": "https://github.com/solid/solid-ui",
   "dependencies": {
     "escape-html": "^1.0.3",
+    "mime-types": "^2.1.20",
     "node-uuid": "^1.4.7",
     "rdflib": "^0.19.1",
-    "regenerate": "^1.3.2",
-    "solid-auth-client": "^2.2.6",
+    "solid-auth-client": "^2.2.13",
     "solid-auth-tls": "^0.1.2"
   },
   "dependenciesBackup": {
@@ -52,7 +52,6 @@
     "escape-html": "^1.0.3",
     "node-uuid": "^1.4.7",
     "rdflib": "^0.19.1",
-    "regenerate": "^1.3.2",
     "solid-auth-client": "^2.2.6",
     "solid-auth-tls": "^0.1.2"
   },
@@ -60,7 +59,6 @@
     "escape-html": "^1.0.3",
     "node-uuid": "^1.4.7",
     "rdflib": "file://../../linkeddata/rdflib.js",
-    "regenerate": "^1.3.2",
     "solid-auth-client": "^2.2.6",
     "solid-auth-tls": "^0.1.2"
   },
