--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "rdflib": "^0.19.1",
     "solid-auth-client": "^2.2.13",
     "solid-auth-tls": "^0.1.2",
-    "solid-namespace": "*"
+    "solid-namespace": "0.2.0"
   },
   "dependenciesBackup": {
     "ajv": "^6.5.5",
@@ -55,7 +55,7 @@
     "rdflib": "^0.19.1",
     "solid-auth-client": "^2.2.6",
     "solid-auth-tls": "^0.1.2",
-    "solid-namespace": "*"
+    "solid-namespace": "0.2.0"
   },
   "dependenciesFile": {
     "escape-html": "^1.0.3",
@@ -63,7 +63,7 @@
     "rdflib": "file://../../linkeddata/rdflib.js",
     "solid-auth-client": "^2.2.6",
     "solid-auth-tls": "^0.1.2",
-    "solid-namespace": "*"
+    "solid-namespace": "0.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
