Use long forms of CLI arguments
This allows developers to understand what it is doing without
having to look up the documentation.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prepublishOnly": "npm run build",
     "standard": "standard src",
     "test": "npm run standard",
-    "watch": "babel --no-babelrc src -d lib -w"
+    "watch": "babel --no-babelrc src --out-dir lib --watch"
   },
   "repository": {
     "type": "git",
