--- a/package.json
+++ b/package.json
@@ -44,25 +44,8 @@
     "escape-html": "^1.0.3",
     "mime-types": "^2.1.20",
     "node-uuid": "^1.4.7",
-    "rdflib": "^0.21.1",
+    "rdflib": "^0.21.1-1",
     "solid-auth-client": "^2.2.13",
-    "solid-auth-tls": "^0.1.2",
-    "solid-namespace": "0.2.0"
-  },
-  "dependenciesBackup": {
-    "ajv": "^6.5.5",
-    "escape-html": "^1.0.3",
-    "node-uuid": "^1.4.7",
-    "rdflib": ">=0.20.1",
-    "solid-auth-client": "^2.2.6",
-    "solid-auth-tls": "^0.1.2",
-    "solid-namespace": "0.2.0"
-  },
-  "dependenciesFile": {
-    "escape-html": "^1.0.3",
-    "node-uuid": "^1.4.7",
-    "rdflib": "file://../../linkeddata/rdflib.js",
-    "solid-auth-client": "^2.2.6",
     "solid-auth-tls": "^0.1.2",
     "solid-namespace": "0.2.0"
   },
