--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "escape-html": "^1.0.3",
     "mime-types": "^2.1.24",
     "node-uuid": "^1.4.7",
+    "pane-registry": "^2.0.0",
     "rdflib": "^1.0.6",
     "solid-auth-client": "^2.3.1",
     "solid-auth-tls": "^0.1.2",
