--- a/package.json
+++ b/package.json
@@ -78,6 +78,10 @@
       "pre-push": "npm test"
     }
   },
+  "eslintignore": [
+    "package.json",
+    "*.html"
+  ],
   "lint-staged": {
     "src/**/*.(js|ts)": [
       "eslint"
