--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "escape-html": "^1.0.3",
     "mime-types": "^2.1.24",
     "node-uuid": "^1.4.7",
-    "pane-registry": "^2.0.0",
-    "rdflib": "^1.0.6",
+    "pane-registry": "^2.0.1-0",
+    "rdflib": "^1.0.7-2",
     "solid-auth-client": "^2.3.1",
     "solid-auth-tls": "^0.1.2",
     "solid-namespace": "0.2.0"
@@ -63,7 +63,6 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-typescript": "^7.6.0",
-    "@types/rdflib": "^0.20.1",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.6.1",
     "eslint": "^6.6.0",
