--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "@babel/preset-typescript"
   ],
   "plugins": [
+    "@babel/plugin-proposal-class-properties",
     "@babel/plugin-transform-async-to-generator",
     "@babel/plugin-transform-runtime"
   ]
