--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
   "dependencies": {
     "@babel/runtime": "^7.6.2",
     "escape-html": "^1.0.3",
+    "jss": "^10.0.3",
+    "jss-preset-default": "^10.0.3",
     "mime-types": "^2.1.24",
     "node-uuid": "^1.4.7",
     "pane-registry": "^2.0.0",
@@ -59,6 +61,7 @@
   "devDependencies": {
     "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-transform-async-to-generator": "^7.5.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
