--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "complexity": ["warn", 15],
     "no-unused-vars": ["warn", {
       "argsIgnorePattern": "^_",
       "varsIgnorePattern": "^_"
