--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "clean": "rm -rf lib",
     "lint": "eslint 'src/**/*.js' 'src/**/*.ts'",
     "lint-fix": "eslint 'src/**/*.js' 'src/**/*.ts' --fix",
-    "test": "npm run lint",
+    "jest": "jest",
+    "test": "npm run lint; npm run jest",
+    "doc": "typedoc --out ./Documentation/api/ ./src/",
     "prepublishOnly": "npm test && npm run build",
     "postpublish": "git push origin master --follow-tags"
   },
@@ -71,8 +73,10 @@
     "@typescript-eslint/parser": "^2.6.1",
     "eslint": "^6.6.0",
     "husky": "^3.0.9",
+    "jest": "^25.1.0",
     "lint-staged": "^10.0.0-1",
     "standard": "^14.3.1",
+    "typedoc": "^0.16.9",
     "typescript": "^3.6.3"
   },
   "husky": {
