export existence tests for src/acl/ and src/authn/

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-typescript": "^7.6.0",
+    "@types/jest": "^25.1.1",
     "@types/rdflib": "^0.20.1",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.6.1",
