--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint 'src/**/*.js' 'src/**/*.ts'",
     "lint-fix": "eslint 'src/**/*.js' 'src/**/*.ts' --fix",
     "jest": "jest",
-    "test": "npm run lint; npm run jest",
+    "test": "npm run build; npm run lint; npm run jest",
     "doc": "typedoc --out ./Documentation/api/ ./src/",
     "prepublishOnly": "npm test && npm run build",
     "postpublish": "git push origin master --follow-tags"
