--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "build": "npm run clean && npm run build-version && npm run build-lib && npm run build-types",
     "build-lib": "babel src -d lib --source-maps --extensions '.ts,.js'",
     "build-types": "tsc --emitDeclarationOnly",
-    "build-version": "./timestamp.sh > src/versionInfo.ts  && eslint 'src/versionInfo.ts' --fix",
+    "build-version": "sh ./timestamp.sh > src/versionInfo.ts  && eslint \"src/versionInfo.ts\" --fix",
     "watch": "npm run build-version && babel src --out-dir lib --watch --source-maps --extensions '.ts,.js'",
     "clean": "rm -rf lib",
-    "lint": "eslint 'src/**/*.js' 'src/**/*.ts'",
-    "lint-fix": "eslint 'src/**/*.js' 'src/**/*.ts' --fix",
+    "lint": "eslint \"src/**/*.js\" \"src/**/*.ts\"",
+    "lint-fix": "eslint \"src/**/*.js\" \"src/**/*.ts\" --fix",
     "test": "npm run lint",
     "prepublishOnly": "npm test && npm run build",
     "postpublish": "git push origin master --follow-tags"
