working on forms.test.js

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "rdflib": "^1.0.6",
     "solid-auth-client": "^2.3.1",
     "solid-auth-tls": "^0.1.2",
-    "solid-namespace": "^0.3.0"
+    "solid-namespace": "^0.3.0",
+    "ts-jest": "^25.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.2",
