--- a/package.json
+++ b/package.json
@@ -72,12 +72,14 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-typescript": "^7.6.0",
     "@types/jest": "^25.1.1",
+    "@types/jsdom": "^12.2.4",
     "@types/rdflib": "^0.20.1",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.6.1",
     "eslint": "^6.6.0",
     "husky": "^3.0.9",
     "jest": "^25.1.0",
+    "jsdom": "^16.1.0",
     "lint-staged": "^10.0.0-1",
     "standard": "^14.3.1",
     "typedoc": "^0.16.9",
