add lint to test folder

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "watch": "npm run build-version && babel src --out-dir lib --watch --source-maps --extensions '.ts,.js'",
     "clean": "rm -rf lib",
     "coverage": "jest --coverage --collectCoverageFrom=src/**/*.[jt]s",
-    "lint": "eslint \"src/**/*.js\" \"src/**/*.ts\"",
+    "lint": "eslint \"src/**/*.js\" \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint-fix": "eslint \"src/**/*.js\" \"src/**/*.ts\" --fix",
     "jest": "jest",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
@@ -77,6 +77,7 @@
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.6.1",
     "eslint": "^6.6.0",
+    "eslint-plugin-jest": "^23.7.0",
     "husky": "^3.0.9",
     "jest": "^25.1.0",
     "jsdom": "^16.1.0",
