Tests require Node >= 12, apparently?

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: node_js
 node_js:
-  - "8.12"
-  - "8"
-  - "10.3"
-  - "10"
   - "12.0"
   - "12"
   - "lts/*"
@@ -11,9 +7,8 @@ node_js:
 install:
   - npm ci
 script:
+  # This includes build, lint, and jest:
   - npm test
-  # Make sure it still builds successfully - the build isn't actually used yet:
-  - npm run build
 before_deploy:
   - node ./travis/bumpversion.js
 deploy:
