--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 node_js:
+  # see https://github.com/solid/solid-ui/issues/193 for discussion
+  # of node versions supported for Travis.
   - "12.0"
   - "12"
   - "lts/*"
