--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "watch": "npm run build-version && babel src --out-dir lib --watch --source-maps --extensions '.ts,.js'",
     "clean": "rm -rf lib",
     "coverage": "jest --coverage --collectCoverageFrom=src/**/*.[jt]s",
-    "lint": "eslint \"src/**/*.js\" \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"src/**/*.js\" \"src/**/*.ts\"",
     "lint-fix": "eslint \"src/**/*.js\" \"src/**/*.ts\" --fix",
     "jest": "jest",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
@@ -51,6 +51,7 @@
   "homepage": "https://github.com/solid/solid-ui",
   "dependencies": {
     "@babel/runtime": "^7.6.2",
+    "@types/node": "^13.7.0",
     "escape-html": "^1.0.3",
     "jss": "^10.0.3",
     "jss-preset-default": "^10.0.3",
@@ -72,16 +73,14 @@
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-typescript": "^7.6.0",
     "@types/jest": "^25.1.1",
-    "@types/jsdom": "^12.2.4",
     "@types/rdflib": "^0.20.1",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.6.1",
     "eslint": "^6.6.0",
-    "eslint-plugin-jest": "^23.7.0",
     "husky": "^3.0.9",
     "jest": "^25.1.0",
-    "jsdom": "^16.1.0",
     "lint-staged": "^10.0.0-1",
+    "prettier": "^1.19.1",
     "standard": "^14.3.1",
     "typedoc": "^0.16.9",
     "typescript": "^3.6.3"
