--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "homepage": "https://github.com/solid/solid-ui",
   "dependencies": {
     "@babel/runtime": "^7.10.5",
-    "@types/node": "^13.13.15",
+    "@types/node": "^14.0.26",
     "escape-html": "^1.0.3",
     "jss": "^10.3.0",
     "jss-preset-default": "^10.3.0",
@@ -61,8 +61,7 @@
     "pane-registry": "^2.1.1",
     "rdflib": "^1.2.3",
     "solid-auth-client": "^2.4.1",
-    "solid-namespace": "^0.3.0",
-    "ts-jest": "^25.5.1"
+    "solid-namespace": "^0.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
@@ -73,18 +72,19 @@
     "@babel/plugin-transform-runtime": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@types/jest": "^25.2.3",
-    "@types/jsdom": "^12.2.4",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "eslint": "^6.6.0",
+    "@types/jest": "^26.0.7",
+    "@types/jsdom": "^16.2.3",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
+    "eslint": "^7.5.0",
     "eslint-plugin-jest": "^23.18.0",
-    "husky": "^3.0.9",
-    "jest": "^25.5.4",
+    "husky": "^4.2.5",
+    "jest": "^26.1.0",
     "jsdom": "^16.3.0",
     "lint-staged": "^10.2.11",
     "standard": "^14.3.4",
-    "typedoc": "^0.16.11",
+    "ts-jest": "^26.1.3",
+    "typedoc": "^0.17.8",
     "typescript": "^3.9.7",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12"
