--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "jest": "^26.1.0",
     "jsdom": "^16.3.0",
     "lint-staged": "^10.2.11",
+    "solid-auth-cli": "^1.0.14",
     "standard": "^14.3.4",
     "ts-jest": "^26.1.3",
     "typedoc": "^0.17.8",
