--- a/package.json
+++ b/package.json
@@ -51,43 +51,43 @@
   },
   "homepage": "https://github.com/solid/solid-ui",
   "dependencies": {
-    "@babel/runtime": "^7.10.3",
-    "@types/node": "^13.13.12",
+    "@babel/runtime": "^7.10.5",
     "escape-html": "^1.0.3",
     "jss": "^10.3.0",
     "jss-preset-default": "^10.3.0",
     "mime-types": "^2.1.27",
     "node-uuid": "^1.4.7",
-    "pane-registry": "^2.1.1",
-    "rdflib": "^1.2.3",
-    "solid-auth-client": "^2.4.1",
-    "solid-auth-tls": "^0.1.2",
-    "solid-namespace": "^0.3.0",
-    "ts-jest": "^25.5.1"
+    "pane-registry": "^2.2.1",
+    "rdflib": "^1.3.1",
+    "solid-auth-client": "^2.5.0",
+    "solid-namespace": "^0.4.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.3",
-    "@babel/core": "^7.10.3",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.10.3",
-    "@babel/plugin-transform-async-to-generator": "^7.10.1",
-    "@babel/plugin-transform-runtime": "^7.10.3",
-    "@babel/preset-env": "^7.10.3",
-    "@babel/preset-typescript": "^7.10.1",
-    "@types/jest": "^25.2.3",
-    "@types/jsdom": "^12.2.4",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "eslint": "^6.6.0",
-    "eslint-plugin-jest": "^23.17.0",
-    "husky": "^3.0.9",
-    "jest": "^25.5.4",
-    "jsdom": "^16.2.2",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@babel/plugin-transform-async-to-generator": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.7",
+    "@types/jsdom": "^16.2.3",
+    "@types/node": "^14.0.26",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
+    "eslint": "^7.5.0",
+    "eslint-plugin-jest": "^23.18.2",
+    "husky": "^4.2.5",
+    "jest": "^26.1.0",
+    "jsdom": "^16.3.0",
     "lint-staged": "^10.2.11",
+    "solid-auth-cli": "^1.0.14",
     "standard": "^14.3.4",
-    "typedoc": "^0.16.11",
-    "typescript": "^3.9.5",
-    "webpack": "^4.43.0",
+    "ts-jest": "^26.1.3",
+    "typedoc": "^0.17.8",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12"
   },
   "husky": {
