--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "test": "npm run build && npm run lint && npm run jest",
     "doc": "typedoc --out ./Documentation/api/ ./src/ --stripInternal",
     "prepublishOnly": "npm test && npm run build",
-    "postpublish": "git push origin master --follow-tags"
+    "postpublish": "git push origin master --follow-tags",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -71,17 +73,23 @@
     "@babel/plugin-transform-runtime": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@storybook/addon-actions": "^6.0.10",
+    "@storybook/addon-essentials": "^6.0.10",
+    "@storybook/addon-links": "^6.0.10",
+    "@storybook/html": "^6.0.10",
     "@types/jest": "^26.0.7",
     "@types/jsdom": "^16.2.3",
     "@types/node": "^14.0.26",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
+    "babel-loader": "^8.1.0",
     "eslint": "^7.5.0",
     "eslint-plugin-jest": "^23.18.2",
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "jsdom": "^16.3.0",
     "lint-staged": "^10.2.11",
+    "react-is": "^16.13.1",
     "solid-auth-cli": "^1.0.14",
     "standard": "^14.3.4",
     "ts-jest": "^26.1.3",
