--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
     "declarationMap": true /* Generates a sourcemap for each corresponding '.d.ts' file. */,
     "sourceMap": true /* Generates corresponding '.map' file. */,
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
+
     "outDir": "lib" /* Redirect output structure to the directory. */,
+    "rootDir": "src/",
+
     // "rootDir": "./",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "incremental": true,                   /* Enable incremental compilation */
@@ -67,8 +70,6 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "include": [
-    "src/**/*",
-    "test/**/*",
-    "__mocks__/*"
+    "src/**/*"
   ]
 }
