--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
   - npm test
 before_deploy:
   - node ./travis/bumpversion.js
+  - sh ./travis/unignore-pages.sh
 deploy:
   - provider: npm
     # Do not throw away the updated package.json we generated in `before_deploy`:
