--- a/package.json
+++ b/package.json
@@ -53,50 +53,53 @@
   },
   "homepage": "https://github.com/solid/solid-ui",
   "dependencies": {
-    "@babel/runtime": "^7.10.5",
+    "@babel/runtime": "^7.12.1",
+    "crypto-browserify": "^3.12.0",
     "escape-html": "^1.0.3",
-    "jss": "^10.3.0",
-    "jss-preset-default": "^10.3.0",
+    "jss": "^10.4.0",
+    "jss-preset-default": "^10.4.0",
     "mime-types": "^2.1.27",
     "node-uuid": "^1.4.7",
-    "pane-registry": "^2.2.1",
-    "rdflib": "^1.3.3",
+    "pane-registry": "^2.3.0",
+    "path-browserify": "^1.0.1",
+    "rdflib": "^2.0.0",
     "solid-auth-client": "^2.5.2",
-    "solid-namespace": "^0.4.0"
+    "solid-namespace": "^0.5.0",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
-    "@babel/plugin-transform-async-to-generator": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@storybook/addon-actions": "^6.0.18",
-    "@storybook/addon-essentials": "^6.0.18",
-    "@storybook/addon-links": "^6.0.18",
-    "@storybook/html": "^6.0.18",
-    "@types/jest": "^26.0.7",
-    "@types/jsdom": "^16.2.3",
-    "@types/node": "^14.0.26",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
+    "@babel/plugin-transform-async-to-generator": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-typescript": "^7.12.1",
+    "@storybook/addon-actions": "^6.0.27",
+    "@storybook/addon-essentials": "^6.0.27",
+    "@storybook/addon-links": "^6.0.27",
+    "@storybook/html": "^6.0.27",
+    "@types/jest": "^26.0.15",
+    "@types/jsdom": "^16.2.4",
+    "@types/node": "^14.14.2",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
     "babel-loader": "^8.1.0",
-    "eslint": "^7.5.0",
-    "eslint-plugin-jest": "^23.18.2",
-    "husky": "^4.2.5",
-    "jest": "^26.1.0",
-    "jsdom": "^16.3.0",
-    "lint-staged": "^10.2.11",
-    "react-is": "^16.13.1",
-    "solid-auth-cli": "^1.0.14",
-    "standard": "^14.3.4",
-    "ts-jest": "^26.1.3",
-    "typedoc": "^0.17.8",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12"
+    "eslint": "^7.11.0",
+    "eslint-plugin-jest": "^24.1.0",
+    "husky": "^4.3.0",
+    "jest": "^26.6.1",
+    "jsdom": "^16.4.0",
+    "lint-staged": "^10.4.2",
+    "react-is": "^17.0.1",
+    "solid-auth-cli": "^1.0.15",
+    "standard": "^15.0.0",
+    "ts-jest": "^26.4.1",
+    "typedoc": "^0.19.2",
+    "typescript": "^4.0.3",
+    "webpack": "^5.2.0",
+    "webpack-cli": "^4.1.0"
   },
   "husky": {
     "hooks": {
