--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build-version && npm run build-lib && npm run build-types && npm run build-webpack && npm run build-storybook",
+    "build": "npm run clean && npm run build-version && npm run build-lib && npm run build-types && npm run build-webpack",
     "build-lib": "babel src -d lib --source-maps --extensions \".ts,.js\"",
     "build-types": "tsc --emitDeclarationOnly",
     "build-version": "sh ./timestamp.sh > src/versionInfo.ts  && eslint \"src/versionInfo.ts\" --fix",
@@ -82,11 +82,11 @@
     "@storybook/html": "^6.0.27",
     "@types/jest": "^26.0.15",
     "@types/jsdom": "^16.2.4",
-    "@types/node": "^14.14.2",
+    "@types/node": "^14.14.3",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "babel-loader": "^8.1.0",
-    "eslint": "^7.11.0",
+    "eslint": "^7.12.0",
     "eslint-plugin-jest": "^24.1.0",
     "husky": "^4.3.0",
     "jest": "^26.6.1",
@@ -95,7 +95,7 @@
     "react-is": "^17.0.1",
     "solid-auth-cli": "^1.0.15",
     "standard": "^15.0.0",
-    "ts-jest": "^26.4.1",
+    "ts-jest": "^26.4.2",
     "typedoc": "^0.19.2",
     "typescript": "^4.0.3",
     "webpack": "^5.2.0",
