--- a/package.json
+++ b/package.json
@@ -59,13 +59,13 @@
     "jss": "^10.4.0",
     "jss-preset-default": "^10.4.0",
     "mime-types": "^2.1.27",
-    "node-uuid": "^1.4.7",
     "pane-registry": "^2.3.1",
     "path-browserify": "^1.0.1",
-    "rdflib": "^2.0.0",
+    "rdflib": "^2.1.1",
     "solid-auth-client": "^2.5.2",
     "solid-namespace": "^0.5.0",
-    "stream-browserify": "^3.0.0"
+    "stream-browserify": "^3.0.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -83,8 +83,8 @@
     "@types/jest": "^26.0.15",
     "@types/jsdom": "^16.2.4",
     "@types/node": "^14.14.3",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
     "babel-loader": "^8.1.0",
     "eslint": "^7.12.0",
     "eslint-plugin-jest": "^24.1.0",
