--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "path-browserify": "^1.0.1",
     "rdflib": "^2.1.1",
     "solid-auth-client": "^2.5.2",
+    "solid-logic": "^1.0.2",
     "solid-namespace": "^0.5.0",
     "stream-browserify": "^3.0.0",
     "uuid": "^8.3.1"
