--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "npm run build && npm run lint && npm run jest",
     "doc": "typedoc --out ./Documentation/api/ ./src/ --stripInternal",
     "prepublishOnly": "npm test && npm run build",
-    "postpublish": "git push origin master --follow-tags",
+    "postpublish": "git push origin main --follow-tags",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook  --output-dir ./examples/storybook"
   },
