--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
     "lint-staged": "^10.5.3",
+    "raw-loader": "^4.0.2",
     "react-is": "^17.0.1",
     "solid-auth-cli": "^1.0.15",
     "standard": "^16.0.3",
