--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "mime-types": "^2.1.28",
     "pane-registry": "^2.3.5",
     "path-browserify": "^1.0.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
     "rdflib": "^2.1.7",
     "solid-auth-client": "^2.5.5",
     "solid-logic": "^1.3.1",
