--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "homepage": "https://github.com/solid/solid-ui",
   "dependencies": {
-    "@babel/runtime": "^7.12.5",
+    "@babel/runtime": "^7.14.0",
     "contacts-pane": "^2.4.7",
     "crypto-browserify": "^3.12.0",
     "escape-html": "^1.0.3",
@@ -87,6 +87,7 @@
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "eslint": "^7.18.0",
     "eslint-plugin-jest": "^24.1.3",
