--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "mime-types": "^2.1.28",
     "pane-registry": "^2.3.5",
     "path-browserify": "^1.0.1",
-    "rdflib": "^2.1.7",
+    "rdflib": "^2.2.3",
     "solid-auth-client": "^2.5.5",
     "solid-logic": "^1.2.9",
     "solid-namespace": "^0.5.0",
@@ -78,9 +78,11 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@storybook/addon-actions": "^6.1.15",
-    "@storybook/addon-essentials": "^6.1.15",
+    "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.1.15",
-    "@storybook/html": "^6.1.15",
+    "@storybook/html": "^6.2.9",
+    "@testing-library/dom": "^7.31.0",
+    "@testing-library/user-event": "^13.1.9",
     "@types/jest": "^26.0.20",
     "@types/jsdom": "^16.2.6",
     "@types/node": "^14.14.22",
@@ -97,7 +99,7 @@
     "solid-auth-cli": "^1.0.15",
     "standard": "^16.0.3",
     "ts-jest": "^26.4.4",
-    "typedoc": "^0.20.19",
+    "typedoc": "^0.20.36",
     "typescript": "^4.1.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
