--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "mime-types": "^2.1.28",
     "pane-registry": "^2.3.5",
     "path-browserify": "^1.0.1",
-    "rdflib": "^2.1.7",
+    "rdflib": "^2.2.3",
     "solid-auth-client": "^2.5.5",
     "solid-logic": "^1.3.5",
     "solid-namespace": "^0.5.0",
@@ -81,6 +81,7 @@
     "@storybook/addon-essentials": "^6.1.20",
     "@storybook/addon-links": "^6.1.15",
     "@storybook/html": "^6.1.20",
+    "@testing-library/dom": "^7.31.0",
     "@types/jest": "^26.0.20",
     "@types/jsdom": "^16.2.6",
     "@types/node": "^14.14.22",
@@ -94,6 +95,7 @@
     "jest": "^26.6.3",
     "jsdom": "^16.4.0",
     "lint-staged": "^10.5.3",
+    "nock": "^13.0.11",
     "postcss-flexbugs-fixes": "^5.0.2",
     "raw-loader": "^4.0.2",
     "react-is": "^17.0.1",
