--- a/package.json
+++ b/package.json
@@ -103,8 +103,8 @@
     "solid-auth-cli": "^1.0.15",
     "standard": "^16.0.3",
     "ts-jest": "^26.4.4",
-    "typedoc": "^0.20.28",
-    "typescript": "^4.2.4",
+    "typedoc": "^0.21.0-beta.2",
+    "typescript": "^4.3.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
