--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "pane-registry": "^2.4.2",
     "path-browserify": "^1.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "rdflib": "^2.2.5",
+    "rdflib": "^2.2.6",
     "solid-auth-client": "^2.5.6",
     "solid-logic": "^1.3.6",
     "solid-namespace": "^0.5.1",
@@ -104,8 +104,8 @@
     "solid-auth-cli": "^1.0.15",
     "standard": "^16.0.3",
     "ts-jest": "^26.4.4",
-    "typedoc": "^0.21.0-beta.2",
-    "typescript": "^4.3.2",
+    "typedoc": "^0.21.1",
+    "typescript": "^4.3.4",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
