--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "homepage": "https://github.com/solid/solid-ui",
   "dependencies": {
     "@babel/runtime": "^7.14.0",
+    "@inrupt/solid-client-authn-browser": "^1.10.1",
     "crypto-browserify": "^3.12.0",
     "escape-html": "^1.0.3",
     "jss": "^10.6.0",
@@ -63,7 +64,6 @@
     "path-browserify": "^1.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "rdflib": "^2.2.6",
-    "solid-auth-client": "^2.5.6",
     "solid-logic": "^1.3.6",
     "solid-namespace": "^0.5.1",
     "stream-browserify": "^3.0.0",
