updated libs, updated storybook

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@storybook/addon-actions": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/html": "^6.4.9",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/user-event": "^13.5.0",
@@ -93,8 +94,13 @@
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.3",
     "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "html-webpack-plugin": "^4.5.2",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "jsdom": "^19.0.0",
@@ -102,6 +108,8 @@
     "nock": "^13.2.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "raw-loader": "^4.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "standard": "^16.0.4",
     "ts-jest": "^27.1.2",
