added an example for ui:Choise in structures4 and fixed bugs in forms for ui:choice

--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "build-types": "tsc --emitDeclarationOnly",
     "build-version": "sh ./timestamp.sh > src/versionInfo.ts  && eslint \"src/versionInfo.ts\" --fix",
     "build-webpack": "webpack",
+    "build-form-examples": "npm run build-lib && npm run build-webpack && cp ./dist/*.js ./Documentation/form-examples/",
     "watch": "npm run build-version && babel src --out-dir lib --watch --source-maps --extensions \".ts,.js\"",
-    "clean": "rm -rf lib",
+    "clean": "rm -rf lib dist ./Documentation/form-examples/main.js",
     "coverage": "jest --coverage --collectCoverageFrom=src/**/*.[jt]s",
     "lint": "eslint \"src/**/*.js\" \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint-fix": "eslint \"src/**/*.js\" \"src/**/*.ts\" --fix",
