--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint-fix": "eslint \"src/**/*.js\" \"src/**/*.ts\" \"test/**/*.ts\" --fix",
     "jest": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
-    "test": "npm run build-version && npm run lint && npm run jest -- --forceExit",
+    "test": "npm run build-version && npm run lint && npm run jest -- test/unit/*.ts && npm run jest -- test/unit/*/*",
     "doc": "typedoc --out ./Documentation/api/ ./src/ --excludeInternal",
     "prepublishOnly": "npm test && npm run build && npm run doc",
     "postpublish": "git push origin main --follow-tags",
