--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "coverage": "jest --coverage --collectCoverageFrom=src/**/*.[jt]s",
     "lint": "eslint \"src/**/*.js\" \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint-fix": "eslint \"src/**/*.js\" \"src/**/*.ts\" \"test/**/*.ts\" --fix",
-    "jest": "jest",
+    "jest": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
     "test": "npm run build-version && npm run lint && npm run jest",
     "doc": "typedoc --out ./Documentation/api/ ./src/ --excludeInternal",
@@ -62,9 +62,9 @@
     "jss-preset-default": "^10.9.2",
     "mime-types": "^2.1.35",
     "npm": "^8.19.3",
-    "pane-registry": "^2.4.18",
-    "rdflib": "^2.2.25",
-    "solid-logic": "^2.1.2",
+    "pane-registry": "^2.4.19-b3cca8ea",
+    "rdflib": "^2.2.26-1",
+    "solid-logic": "^2.1.2-9f0e0997",
     "solid-namespace": "^0.5.2",
     "uuid": "^8.3.2"
   },
