--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
 #      - uses: SimenB/github-actions-cpu-cores@v1
 #        id: cpu-cores
       - run: npm ci
-      - run: npm run test -- --max-workers 2 # ${{ steps.cpu-cores.outputs.count }}
+      - run: npm run test --  --testMatch:**/?(*.)+(spec|test).[tj]s?(x) --max-workers 2 # ${{ steps.cpu-cores.outputs.count }}
       - run: npm run doc
       - run: npm run build
       - name: Save build
